--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,7 +14,7 @@ jobs:
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: Setup Node
@@ -23,6 +23,7 @@ jobs:
           node-version: "16"
 
       - name: Install and Build
+        run: |
           yarn
           yarn generate:gh-pages
 
