--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,8 +22,10 @@ jobs:
         with:
           node-version: "16"
 
-      - name: Install and Build
+      - name: Install
         run: yarn
+
+      - name: Build
         run: yarn generate:gh-pages
 
       - name: deploy
